Data bölümü oluşturuldu

--- a/Admin/Web.config
+++ b/Admin/Web.config
@@ -33,6 +33,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="etkinlikContainer" connectionString="metadata=res://*/etkinlik.csdl|res://*/etkinlik.ssdl|res://*/etkinlik.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=etkinlik;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
